--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,12 @@ node_modules/
 frontend/node_modules/
 backend/node_modules/
 
+backend/uploads
+backend/outputs
+
+
+
+
 # Optional npm cache directory
 .npm
 
